# majoDietAgent

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/agents/: diet_planner.py
src/api/: app.py  schemas.py
src/api/routers/: chat.py  ingest.py  meals.py
src/db/: jobs.py  queries.py  supabase_client.py
src/schemas/: meal.py  patient.py
src/steps/: extract_meals.py  save_to_db.py
src/tools/: calculations.py  meal_estimator.py  patient_tools.py  plan_tools.py  search_tools.py
src/utils/: document_loader.py
src/workflows/: diet_planner.py  extraction.py
